@startuml

title __SPRITES's Class Diagram__\n

  namespace sprites {
      class sprites.Blinky {
          + Blinky()
      }
      abstract class sprites.Character {
          {abstract} + addFrameManager()
          {abstract} + move()
          + returnToSpawnPoint()
      }
      class sprites.Clyde {
          + Clyde()
      }
      enum Direction {
        DOWN
        LEFT
        RIGHT
        UP
      }
      
      class sprites.Fruit {
          + Fruit()
      }
      abstract class sprites.Ghost {
          # frightTime : long
          # timer : Timer
          + Ghost()
          + becomeEaten()
          + becomeFrightened()
          + calcDist()
          + changeDir()
          + changeToRandDir()
          {abstract} + setChaseTarget()
      }
      class sprites.Inky {
          + Inky()
      }
      class sprites.Pacman {
          - keyCode : int
          - lives : int
          - timer : Timer
          + Pacman()
          + addPoints()
          + changeLoop()
          + doOneLoop()
          + keyPressed()
      }
      class sprites.Pill {
          + Pill()
      }
      class sprites.Pinky {
          + Pinky()
      }
      class sprites.Portal {
          # color : String
          + Portal()
      }
      class sprites.PowerPill {
          + PowerPill()
      }
      abstract class sprites.Sprite {
          # dead : boolean
          # dx : int
          # dy : int
          # h : int
          # imageList : Image
          # points : int
          # w : int
          # x : int
          # y : int
          + Sprite()
          + checkCollision()
          + checkCircleCollision()
          + die()
      }
      enum State {
        CHASE
        EATEN
        FRIGHTENED
        SCATTER
      }

  sprites.Blinky -up-|> sprites.Ghost
  sprites.Character -up-|> sprites.Sprite
  sprites.Clyde -up-|> sprites.Ghost
  sprites.Fruit -up-|> sprites.Sprite
  sprites.Ghost -up-|> sprites.Character
  sprites.Ghost o-- frameManagers.GhostFrameManager : frameManager
  sprites.Ghost o-- loops.GhostLoop : ghostLoop
  sprites.Pacman o-- loops.PacmanLoop : timer.getActionListeners()
  sprites.Ghost o-- sprites.Pacman : pacman
  sprites.Ghost o-- sprites.State : state
  sprites.Inky -up-|> sprites.Ghost
  sprites.Inky o-- sprites.Blinky : blinky
  sprites.Pacman -up-|> sprites.Character
  sprites.Pacman o-- frameManagers.PacmanFrameManager : frameManager
  sprites.Pill -up-|> sprites.Sprite
  sprites.Pinky -up-|> sprites.Ghost
  sprites.Portal -up-|> sprites.Sprite
  sprites.Portal o-- sprites.Portal : other
  sprites.PowerPill -up-|> sprites.Sprite
  sprites.Sprite o-- sprites.Direction : dir
  logic.GameLogic o-- sprites.Pacman : pacman
    logic.GameLogic o-- sprites.Ghost : ghosts
  structure.Maze o-- sprites.Portal : bluePortal / redPortal
    structure.Maze o-- sprites.Pill : pills
    structure.Maze o-- sprites.Fruit : fruit
    structure.Maze o-- sprites.PowerPill : powerPills


@enduml
